--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               <li><i class="ci-check-circle text-success me-2"></i>40+ Flexible Components</li>
             </ul>
           </div>
-          <div class="col-lg-7 offset-xl-1"><img src="pages-showcase.jpg" alt="Cartzilla pages"></div>
+          <div class="col-lg-7 offset-xl-1"><img src="https://source.unsplash.com/400x400/?UX,water" alt="Cartzilla pages"></div>
         </div>
       </div>
     </section>
