--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top d-block mx-lg-auto img-fluid" style="border-radius: 20px;" width="100%" height="370" loading="lazy" src="Arru.png" alt="">
+                <img class="bd-placeholder-img card-img-top d-block mx-lg-auto img-fluid" style="border-radius: 20px;" width="100%" height="370" loading="lazy" src="arru.png" alt="">
                 <div class="card-body">
                   <h5 style="text-align: center;">Dr.Arittri Saha</h5>
                 <p style="text-align: center; color: #24AC7C;">Counsellor</p>
